--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#Spring Boot admin
+spring.boot.admin.url=http://localhost:8080/admin
+spring.boot.admin.context-path=/admin
 
